# qsb-ada

./: .gitignore  CMakeLists.txt  README.md  qsb-ada.kdev4
etc/cmake/: Common.cmake
etc/gpr/: basic_executable.gpr  basic_project.gpr
src/: CMakeLists.txt
src/sound/: ring_facet.adb~  sound-buffer.adb  sound-buffer.ads  sound-bus-debug.adb  sound-bus-debug.ads  sound-bus.adb  sound-bus.ads  sound-constants.ads  sound-events.ads  sound-leveler.adb  sound-leveler.ads  sound-math.adb  sound-math.ads  sound-meter.adb  sound-meter.ads  sound-object.adb  sound-object.ads  sound-processor.adb  sound-processor.ads  sound-ring_facet.adb  sound-ring_facet.ads  sound.gpr
tests/: CMakeLists.txt
tests/ada_tests/: ada_tests.adb  ada_tests.gpr  common-random.adb  common-random.ads  common-wave.adb  common-wave.ads  common.ads  fixture-sound_bus_test.adb  fixture-sound_bus_test.ads  fixture-sound_processor_test.adb  fixture-sound_processor_test.ads  fixture.ads  sound_buffer_test.adb  sound_buffer_test.ads  sound_bus_test.adb  sound_bus_test.ads  sound_bus_test_fixture.adb  sound_bus_test_fixture.ads  sound_processor_test.adb  sound_processor_test.ads  sound_ring_facet_test.adb  sound_ring_facet_test.ads  sound_test.adb  sound_test.ads  test_facet.adb  test_facet.ads  test_suite.adb  test_suite.ads
